[project]
name = "maitre-d"
version = "0.1.0"
description = ""
authors = [
    {name = "Woodson",email = "woodson.miles@my.wheaton.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "maitre_d", from = "src"}]

[tool.poetry.scripts]
maitre = "cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
